--- a/BinaryClassificationInsuranceRenewal/EDU_RenewalProjectPublic.ipynb
+++ b/BinaryClassificationInsuranceRenewal/EDU_RenewalProjectPublic.ipynb
@@ -1870,8 +1870,7 @@
     "# Build model of random forest with number of trees 100 and fixed random state = 11\n",
     "from sklearn import ensemble\n",
     "rf = ensemble.RandomForestClassifier(n_estimators=100, random_state=11)\n",
-    "rf.fit(X_train, y_train)\n",
-    "\n"
+    "rf.fit(X_train, y_train)"
    ]
   },
   {
@@ -4674,8 +4673,7 @@
     "\n",
     "from sklearn import ensemble\n",
     "gbt = ensemble.GradientBoostingClassifier(n_estimators=100, random_state=11)\n",
-    "gbt.fit(X_train, y_train)\n",
-    "\n"
+    "gbt.fit(X_train, y_train)"
    ]
   },
   {
@@ -4715,7 +4713,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   }
  ],
  "metadata": {
@@ -4728,7 +4728,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 3.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
