Update repo for second seminar

--- a/MLCourse/12-2020 start/Seminars/Seminar1 - Python, Pandas/[seminar]python_extension.ipynb
+++ b/MLCourse/12-2020 start/Seminars/Seminar1 - Python, Pandas/[seminar]python_extension.ipynb
@@ -20,6 +20,13 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ноутбук из школы Deep learning School"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
     "id": "_kqD6lQ7GwzA",
@@ -6228,7 +6235,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.8.5"
   },
   "papermill": {
    "default_parameters": {},
