Add plan and practice file

--- a/MLCourse/12-2020 start/Seminars/Seminar1 - Python, Pandas/[seminar]python_extension.ipynb
+++ b/MLCourse/12-2020 start/Seminars/Seminar1 - Python, Pandas/[seminar]python_extension.ipynb
@@ -761,16 +761,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "execution": {
-     "iopub.execute_input": "2020-12-07T07:36:37.277055Z",
-     "iopub.status.busy": "2020-12-07T07:36:37.276114Z",
-     "iopub.status.idle": "2020-12-07T07:36:37.280298Z",
-     "shell.execute_reply": "2020-12-07T07:36:37.281090Z"
-    },
     "id": "f-kwu3wkGwzr",
     "papermill": {
      "duration": 0.20288,
@@ -2053,7 +2047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -2083,7 +2077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -2092,7 +2086,7 @@
        "['Михайлович', 'Андрей', 'Райгородский']"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2103,16 +2097,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "execution": {
-     "iopub.execute_input": "2020-12-07T07:36:56.026514Z",
-     "iopub.status.busy": "2020-12-07T07:36:56.025457Z",
-     "iopub.status.idle": "2020-12-07T07:36:56.030610Z",
-     "shell.execute_reply": "2020-12-07T07:36:56.029745Z"
-    },
     "id": "xG3_3t13zM7q",
     "papermill": {
      "duration": 0.216453,
@@ -2215,16 +2203,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "execution": {
-     "iopub.execute_input": "2020-12-07T07:36:58.082218Z",
-     "iopub.status.busy": "2020-12-07T07:36:58.081164Z",
-     "iopub.status.idle": "2020-12-07T07:36:58.087775Z",
-     "shell.execute_reply": "2020-12-07T07:36:58.086664Z"
-    },
     "id": "pGXNzuLsGw1U",
     "papermill": {
      "duration": 0.216315,
@@ -2254,16 +2236,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "execution": {
-     "iopub.execute_input": "2020-12-07T07:36:58.509142Z",
-     "iopub.status.busy": "2020-12-07T07:36:58.508105Z",
-     "iopub.status.idle": "2020-12-07T07:36:58.511404Z",
-     "shell.execute_reply": "2020-12-07T07:36:58.512288Z"
-    },
     "id": "rWHlu6YgzM7v",
     "papermill": {
      "duration": 0.217053,
@@ -2276,7 +2252,7 @@
    },
    "outputs": [],
    "source": [
-    "c = [2, 'a', [4, 'stroka', 6.56]]"
+    "c = [2, 'a', [4, 'stroka', 6.56], 'a']"
    ]
   },
   {
@@ -2568,16 +2544,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "execution": {
-     "iopub.execute_input": "2020-12-07T07:37:03.526366Z",
-     "iopub.status.busy": "2020-12-07T07:37:03.524871Z",
-     "iopub.status.idle": "2020-12-07T07:37:03.532767Z",
-     "shell.execute_reply": "2020-12-07T07:37:03.536086Z"
-    },
     "id": "UFv9nYtpzM77",
     "papermill": {
      "duration": 0.226465,
@@ -2595,7 +2565,7 @@
        "1"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6235,7 +6205,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.8"
   },
   "papermill": {
    "default_parameters": {},
