--- a/MLPractice/!mset.space - Template.ipynb
+++ b/MLPractice/!mset.space - Template.ipynb
@@ -56,6 +56,9 @@
     "## Purpose\n",
     "State the purpose of the notebook.\n",
     "\n",
+    "## Author\n",
+    "Name of author\n",
+    "\n",
     "## Methodology\n",
     "Quickly describe assumptions and processing steps.\n",
     "\n",
