--- a/DeepLearning/DLA/NEMO/voice_assistant.ipynb
+++ b/DeepLearning/DLA/NEMO/voice_assistant.ipynb
@@ -85,14 +85,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[NeMo I 2023-12-11 08:36:06 mixins:170] Tokenizer SentencePieceTokenizer initialized with 1024 tokens\n"
+      "[NeMo I 2023-12-19 13:40:07 mixins:170] Tokenizer SentencePieceTokenizer initialized with 1024 tokens\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[NeMo W 2023-12-11 08:36:07 modelPT:161] If you intend to do training or fine-tuning, please call the ModelPT.setup_training_data() method and provide a valid configuration file to setup the train data loader.\n",
+      "[NeMo W 2023-12-19 13:40:09 modelPT:161] If you intend to do training or fine-tuning, please call the ModelPT.setup_training_data() method and provide a valid configuration file to setup the train data loader.\n",
       "    Train config : \n",
       "    manifest_filepath: null\n",
       "    sample_rate: 16000\n",
@@ -111,7 +111,7 @@
       "    bucketing_batch_size: null\n",
       "    bucketing_weights: ''\n",
       "    \n",
-      "[NeMo W 2023-12-11 08:36:07 modelPT:168] If you intend to do validation, please call the ModelPT.setup_validation_data() or ModelPT.setup_multiple_validation_data() method and provide a valid configuration file to setup the validation data loader(s). \n",
+      "[NeMo W 2023-12-19 13:40:09 modelPT:168] If you intend to do validation, please call the ModelPT.setup_validation_data() or ModelPT.setup_multiple_validation_data() method and provide a valid configuration file to setup the validation data loader(s). \n",
       "    Validation config : \n",
       "    manifest_filepath: null\n",
       "    sample_rate: 16000\n",
@@ -121,7 +121,7 @@
       "    pin_memory: true\n",
       "    use_start_end_token: false\n",
       "    \n",
-      "[NeMo W 2023-12-11 08:36:07 modelPT:174] Please call the ModelPT.setup_test_data() or ModelPT.setup_multiple_test_data() method and provide a valid configuration file to setup the test data loader(s).\n",
+      "[NeMo W 2023-12-19 13:40:09 modelPT:174] Please call the ModelPT.setup_test_data() or ModelPT.setup_multiple_test_data() method and provide a valid configuration file to setup the test data loader(s).\n",
       "    Test config : \n",
       "    manifest_filepath: null\n",
       "    sample_rate: 16000\n",
@@ -137,14 +137,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[NeMo I 2023-12-11 08:36:07 features:289] PADDING: 0\n"
+      "[NeMo I 2023-12-19 13:40:09 features:289] PADDING: 0\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[NeMo W 2023-12-11 08:36:09 nemo_logging:349] /home/jovyan/.cache/pypoetry/virtualenvs/speech-pipe-aX1LTVkJ-py3.10/lib/python3.10/site-packages/torch/nn/modules/rnn.py:71: UserWarning: dropout option adds dropout after all but last recurrent layer, so non-zero dropout expects num_layers greater than 1, but got dropout=0.1 and num_layers=1\n",
+      "[NeMo W 2023-12-19 13:40:11 nemo_logging:349] /home/jovyan/.cache/pypoetry/virtualenvs/speech-pipe-aX1LTVkJ-py3.10/lib/python3.10/site-packages/torch/nn/modules/rnn.py:71: UserWarning: dropout option adds dropout after all but last recurrent layer, so non-zero dropout expects num_layers greater than 1, but got dropout=0.1 and num_layers=1\n",
       "      warnings.warn(\"dropout option adds dropout after all but last \"\n",
       "    \n"
      ]
@@ -153,9 +153,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[NeMo I 2023-12-11 08:36:09 rnnt_models:211] Using RNNT Loss : warprnnt_numba\n",
+      "[NeMo I 2023-12-19 13:40:12 rnnt_models:211] Using RNNT Loss : warprnnt_numba\n",
       "    Loss warprnnt_numba_kwargs: {'fastemit_lambda': 0.0, 'clamp': -1.0}\n",
-      "[NeMo I 2023-12-11 08:36:13 save_restore_connector:249] Model EncDecRNNTBPEModel was successfully restored from /home/jovyan/work/HF_cache/hub/models--nvidia--stt_ru_conformer_transducer_large/snapshots/687d02db291e931455cf321abd625ef2b7f0b1a9/stt_ru_conformer_transducer_large.nemo.\n"
+      "[NeMo I 2023-12-19 13:40:17 save_restore_connector:249] Model EncDecRNNTBPEModel was successfully restored from /home/jovyan/work/HF_cache/hub/models--nvidia--stt_ru_conformer_transducer_large/snapshots/687d02db291e931455cf321abd625ef2b7f0b1a9/stt_ru_conformer_transducer_large.nemo.\n"
      ]
     }
    ],
@@ -236,7 +236,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ee2f0c8a7b41413a84a9c046d3cdc106",
+       "model_id": "cc70d62736a440eaa7f8da96056c204e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -397,16 +397,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[NeMo I 2023-12-11 08:37:37 cloud:58] Found existing object /home/jovyan/.cache/torch/NeMo/NeMo_1.21.0/titanet-l/11ba0924fdf87c049e339adbf6899d48/titanet-l.nemo.\n",
-      "[NeMo I 2023-12-11 08:37:37 cloud:64] Re-using file from: /home/jovyan/.cache/torch/NeMo/NeMo_1.21.0/titanet-l/11ba0924fdf87c049e339adbf6899d48/titanet-l.nemo\n",
-      "[NeMo I 2023-12-11 08:37:37 common:913] Instantiating model from pre-trained checkpoint\n"
+      "[NeMo I 2023-12-19 13:42:11 cloud:58] Found existing object /home/jovyan/.cache/torch/NeMo/NeMo_1.21.0/titanet-l/11ba0924fdf87c049e339adbf6899d48/titanet-l.nemo.\n",
+      "[NeMo I 2023-12-19 13:42:11 cloud:64] Re-using file from: /home/jovyan/.cache/torch/NeMo/NeMo_1.21.0/titanet-l/11ba0924fdf87c049e339adbf6899d48/titanet-l.nemo\n",
+      "[NeMo I 2023-12-19 13:42:11 common:913] Instantiating model from pre-trained checkpoint\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[NeMo W 2023-12-11 08:37:38 modelPT:161] If you intend to do training or fine-tuning, please call the ModelPT.setup_training_data() method and provide a valid configuration file to setup the train data loader.\n",
+      "[NeMo W 2023-12-19 13:42:11 modelPT:161] If you intend to do training or fine-tuning, please call the ModelPT.setup_training_data() method and provide a valid configuration file to setup the train data loader.\n",
       "    Train config : \n",
       "    manifest_filepath: /manifests/combined_fisher_swbd_voxceleb12_librispeech/train.json\n",
       "    sample_rate: 16000\n",
@@ -431,7 +431,7 @@
       "    num_workers: 15\n",
       "    pin_memory: true\n",
       "    \n",
-      "[NeMo W 2023-12-11 08:37:38 modelPT:168] If you intend to do validation, please call the ModelPT.setup_validation_data() or ModelPT.setup_multiple_validation_data() method and provide a valid configuration file to setup the validation data loader(s). \n",
+      "[NeMo W 2023-12-19 13:42:11 modelPT:168] If you intend to do validation, please call the ModelPT.setup_validation_data() or ModelPT.setup_multiple_validation_data() method and provide a valid configuration file to setup the validation data loader(s). \n",
       "    Validation config : \n",
       "    manifest_filepath: /manifests/combined_fisher_swbd_voxceleb12_librispeech/dev.json\n",
       "    sample_rate: 16000\n",
@@ -447,8 +447,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[NeMo I 2023-12-11 08:37:38 features:289] PADDING: 16\n",
-      "[NeMo I 2023-12-11 08:37:39 save_restore_connector:249] Model EncDecSpeakerLabelModel was successfully restored from /home/jovyan/.cache/torch/NeMo/NeMo_1.21.0/titanet-l/11ba0924fdf87c049e339adbf6899d48/titanet-l.nemo.\n"
+      "[NeMo I 2023-12-19 13:42:11 features:289] PADDING: 16\n",
+      "[NeMo I 2023-12-19 13:42:12 save_restore_connector:249] Model EncDecSpeakerLabelModel was successfully restored from /home/jovyan/.cache/torch/NeMo/NeMo_1.21.0/titanet-l/11ba0924fdf87c049e339adbf6899d48/titanet-l.nemo.\n"
      ]
     }
    ],
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "26bf09b2-a0ed-42a3-86e0-bda2c6fa89c5",
    "metadata": {
     "tags": []
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "75b6b7d9-f75f-453d-b3b7-9c4104bc8bc5",
    "metadata": {
     "tags": []
@@ -552,8 +552,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.72 s, sys: 691 ms, total: 2.41 s\n",
-      "Wall time: 2.43 s\n"
+      "CPU times: user 1.41 s, sys: 206 ms, total: 1.61 s\n",
+      "Wall time: 1.66 s\n"
      ]
     }
    ],
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "12e18c1e-8e1a-4f2e-847d-01afa911f9bc",
    "metadata": {
     "tags": []
@@ -582,8 +582,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 980 ms, sys: 57.3 ms, total: 1.04 s\n",
-      "Wall time: 187 ms\n"
+      "CPU times: user 448 ms, sys: 327 ms, total: 775 ms\n",
+      "Wall time: 215 ms\n"
      ]
     },
     {
@@ -592,7 +592,7 @@
        "1"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "c8400017-7acd-42f7-82d8-866644a3e020",
    "metadata": {
     "tags": []
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "da12d2ed-c99c-4586-8442-d1999e18031a",
    "metadata": {
     "tags": []
@@ -639,8 +639,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.57 ms, sys: 2.27 ms, total: 3.85 ms\n",
-      "Wall time: 2.57 ms\n"
+      "CPU times: user 3.83 ms, sys: 16.4 ms, total: 20.3 ms\n",
+      "Wall time: 17.7 ms\n"
      ]
     },
     {
@@ -649,7 +649,7 @@
        "1"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "d269b472-1e1c-4ea3-a523-9f99810ac04c",
    "metadata": {
     "tags": []
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "a8c99881-78f8-4252-bc71-4d1df5cf4b06",
    "metadata": {
     "tags": []
@@ -705,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "0911bc19-abe5-4e07-ba5c-97e34e5f53fd",
    "metadata": {
     "tags": []
@@ -714,7 +714,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "69dafd443f4841de804507b4827c0602",
+       "model_id": "c2c26c5a4eee4696a7c712b209d098f2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -729,8 +729,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.22 s, sys: 62 ms, total: 1.28 s\n",
-      "Wall time: 560 ms\n"
+      "CPU times: user 843 ms, sys: 107 ms, total: 949 ms\n",
+      "Wall time: 502 ms\n"
      ]
     },
     {
@@ -739,7 +739,7 @@
        "'у меня поднялась температура заложила нос еще болит поясница'"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "56fa608f-8892-44aa-bb0c-3e5a65077749",
    "metadata": {
     "tags": []
@@ -772,8 +772,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 726 ms, sys: 11.8 ms, total: 738 ms\n",
-      "Wall time: 734 ms\n"
+      "CPU times: user 682 ms, sys: 6.71 ms, total: 689 ms\n",
+      "Wall time: 686 ms\n"
      ]
     },
     {
@@ -782,7 +782,7 @@
        "'у меня поднялась температура заложило нос еще болит поясница'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -803,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "8629715a-ee9e-487e-a528-af0b8ce6fb9f",
    "metadata": {
     "tags": []
@@ -813,8 +813,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 331 ms, sys: 39 ms, total: 370 ms\n",
-      "Wall time: 368 ms\n"
+      "CPU times: user 311 ms, sys: 45.8 ms, total: 357 ms\n",
+      "Wall time: 385 ms\n"
      ]
     },
     {
@@ -823,7 +823,7 @@
        "'У меня поднялась температура, заложило нос, еще болит поясница.'"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -844,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "6f70c703-e109-43e9-a4bb-38992e3a4ff5",
    "metadata": {
     "tags": []
@@ -855,10 +855,10 @@
      "output_type": "stream",
      "text": [
       "У меня поднялась температура, заложило нос, еще болит поясница.\n",
-      "Ваша симптоматика может указывать на инфекционное заболевание, возможно, это грипп или общий респираторный вирус. Важно немедленно обратиться к врачу для получения лечения и консультации. Также важно придерживаться правил гигиены и избегать контакта с другими людьми, чтобы не передавать инфекцию.\n",
+      "Ваше состояние может указывать на инфекционное заболевание, такие как грипп или общий респираторный вирус. Важно немедленно обратиться к врачу для получения лечения и консультации. Также важно следовать рекомендациям по самолечению: пить большое количество жидкости, использовать противовоспалительные средства, принимать лекарства по рецепту, спать достаточно и т. д.\n",
       "==============================\n",
-      "CPU times: user 56.5 s, sys: 153 ms, total: 56.6 s\n",
-      "Wall time: 56.6 s\n"
+      "CPU times: user 1min 23s, sys: 185 ms, total: 1min 23s\n",
+      "Wall time: 1min 23s\n"
      ]
     }
    ],
@@ -877,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "9ccde8ec-3a51-4e2d-916a-9964c2e41cf4",
    "metadata": {
     "tags": []
@@ -887,17 +887,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2.66 s, sys: 228 ms, total: 2.89 s\n",
-      "Wall time: 113 ms\n"
+      "CPU times: user 3.36 ms, sys: 0 ns, total: 3.36 ms\n",
+      "Wall time: 3.15 ms\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'в+аша симптом+атика м+ожет ук+азывать н+а инфекци+онное заболев+ание, возм+ожно, +это гр+ипп +или +общий респират+орный в+ирус. в+ажно нем+едленно обрат+иться к врач+у дл+я получ+ения леч+ения и консульт+ации. т+акже в+ажно прид+ерживаться пр+авил гиги+ены и избег+ать конт+акта с друг+ими людьм+и, чт+обы н+е передав+ать инф+екцию.'"
+       "'в+аше состо+яние м+ожет ук+азывать н+а инфекци+онное заболев+ание, так+ие к+ак гр+ипп +или +общий респират+орный в+ирус. в+ажно нем+едленно обрат+иться к врач+у дл+я получ+ения леч+ения и консульт+ации. т+акже в+ажно сл+едовать рекоменд+ациям п+о самолеч+ению: п+ить больш+ое кол+ичество ж+идкости, исп+ользовать противовоспал+ительные ср+едства, приним+ать лек+арства п+о рец+епту, сп+ать дост+аточно и т. д.'"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -918,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "82c7423a-d08d-448e-9bcf-aa2cc138faa2",
    "metadata": {
     "tags": []
@@ -928,8 +928,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3min 26s, sys: 2.61 s, total: 3min 29s\n",
-      "Wall time: 7.17 s\n"
+      "CPU times: user 4min 25s, sys: 2.71 s, total: 4min 28s\n",
+      "Wall time: 10.1 s\n"
      ]
     }
    ],
@@ -941,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "9974315e-d221-4a86-a94e-f59aa0c74a5e",
    "metadata": {
     "tags": []
